Updates supporting a dynamically loader kernel.
git-svn-id: https://svn.apache.org/repos/asf/avalon/trunk@17941 13f79535-47bb-0310-9956-ffa450edef68