@@ -50,39 +50,23 @@
 package org.apache.avalon.merlin.unit;
 
 import java.io.File;
-import java.io.InputStream;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.util.List;
-import java.util.ArrayList;
-import java.util.StringTokenizer;
-import java.util.Properties;
 import java.util.Map;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
-import java.lang.reflect.InvocationTargetException;
+import java.util.Hashtable;
+import java.net.URL;
 
-import org.apache.avalon.merlin.kernel.impl.DefaultKernel;
-import org.apache.avalon.merlin.kernel.impl.DefaultKernelContext;
-import org.apache.avalon.merlin.kernel.KernelContext;
-import org.apache.avalon.merlin.kernel.Kernel;
 import org.apache.avalon.activation.appliance.Appliance;
 import org.apache.avalon.activation.appliance.Block;
-import org.apache.avalon.repository.Repository;
-import org.apache.avalon.repository.ProxyContext;
-import org.apache.avalon.repository.impl.DefaultFileRepository;
-import org.apache.avalon.repository.impl.DefaultAuthenticator;
-import org.apache.avalon.composition.util.ExceptionHelper;
 import org.apache.avalon.composition.model.ContainmentModel;
 import org.apache.avalon.framework.logger.Logger;
+import org.apache.avalon.merlin.kernel.Kernel;
+import org.apache.avalon.merlin.unit.DefaultRunnableKernel;
 
 import junit.framework.TestCase;
 
 /**
- * Abstract Merlin Test Case.
+ * Default loader testcase.
  *
- * @author <a href="mailto:dev@avalon.apache.org">Avalon Development Team</a>
- * @version $Revision: 1.3 $ $Date: 2003/10/11 22:13:07 $
+ * @author mcconnell@apache.org
  */
 public class AbstractMerlinTestCase extends TestCase
 {
@@ -96,10 +80,10 @@ public class AbstractMerlinTestCase extends TestCase
     public static boolean MERLIN_INFO_ON = true;
 
     public static final File MAVEN_TARGET_CLASSES_DIR = 
-      getTargetClassesDirectory();
+      getProjectFile( "target/classes" );
 
     public static final File MAVEN_TARGET_TEST_CLASSES_DIR = 
-      getTargetTestClassesDirectory();
+      getProjectFile( "target/test-classes" );
 
     public static final File MERLIN_DEFAULT_CONFIG_FILE = 
       getProjectFile( "conf/config.xml" );
@@ -108,15 +92,15 @@ public class AbstractMerlinTestCase extends TestCase
     // state
     //-------------------------------------------------------------------
 
-    private final KernelContext m_context;
-
-    private final Kernel m_kernel;
+    private final DefaultRunnableKernel m_kernel;
 
     private final ContainmentModel m_test;
 
-    private Block m_block;
+    private final Thread m_thread;
 
     private Logger m_logger;
+
+    private Block m_block;
 
     //-------------------------------------------------------------------
     // constructors
@@ -159,15 +143,20 @@ public class AbstractMerlinTestCase extends TestCase
     * Creation of a new test case instance using a supplied test container 
     * path, info and debug policies and unit test name.
     *
-    * @param url the test container deployment path
+    * @param block the test container deployment path
+    * @param targets the test container deployment path
     * @param info information summary display policy
     * @param debug internal container debug policy
     * @param name the name of the test case
     */
-    public AbstractMerlinTestCase( 
+    public AbstractMerlinTestCase(
       File block, File targets, boolean info, boolean debug, String name )
     {
         super( name );
+
+        //
+        // validate arguments
+        //
 
         if( block == null )
         {
@@ -188,52 +177,67 @@ public class AbstractMerlinTestCase extends TestCase
             throw new IllegalStateException( error );
         }
 
-        URL url = convertToURL( block );
-        URL conf = convertToURL( targets );
-
-        File base = 
-          new File( 
-            System.getProperty( 
-              "basedir", 
-              System.getProperty( "user.dir" ) ) );
-
-        File repo = getSystemRepositoryDirectory();
-        Repository repository = createBootstrapRepository( repo );
-        File library = base;
-        URL kernel = null;
-        URL config = null;
-
         //
-        // bootstrap the kernel
+        // build the kernel
         //
+
+        Map map = new Hashtable();
+        map.put( "merlin.policy.info", new Boolean( info ) );
+        map.put( "merlin.policy.debug", new Boolean( debug ) );
+        map.put( "merlin.repository.dir", getMavenRepositoryDirectory() );
 
         try
         {
-            m_context = 
-              new DefaultKernelContext( 
-                repository, repo, library, base, kernel, new URL[0], 
-                config, true, info, debug );
-            m_kernel = new DefaultKernel( m_context );
-            m_logger = 
-              m_context.getLoggerForCategory( "testcase" ).getChildLogger( name );
+            m_kernel = new DefaultRunnableKernel( map );
+            m_thread = new Thread( m_kernel );
+            m_thread.start();
         }
         catch( Throwable e )
         {
-            final String message =
-              "Internal error while attempting to establish the kernel.";
-            final String error = ExceptionHelper.packException( message, e, true );
-            throw new UnitRuntimeException( error, e );
+            final String error = 
+              "Runnable kernel establishment failure.";
+            final String msg = UnitHelper.packException( error, e, true );
+            throw new UnitRuntimeException( msg, e );
         }
 
-        // 
-        // Programatically add the test container to the root containment 
-        // model so that we get a reference to the test model enabling 
-        // access to the test block following setup of the test case. This
-        // allows us to directly lookup objects relative to the test container.
+        //
+        // wait for the kernel to initialize
+        //
+
+        while( !m_kernel.established() )
+        {
+            try
+            {
+                Thread.currentThread().sleep( 100 );
+            }
+            catch( Throwable e )
+            {
+                if( m_kernel.getError() != null )
+                {
+                    final String message = 
+                      "Internal error while attempting to establish the kernel.";
+                    final String error = 
+                      UnitHelper.packException( message, m_kernel.getError(), true );
+                    throw new UnitRuntimeException( error, m_kernel.getError() );
+                }
+            }
+        }
+
+        //
+        // setup a logger for the testcase
+        //
+
+        m_logger = m_kernel.getLoggerForCategory( "testase" );
+
+        //
+        // add a container holding the components that will
+        // be used as services in the testcase
         //
 
         try
         {
+            URL url = convertToURL( block );
+            URL conf = convertToURL( targets );
             ContainmentModel root = m_kernel.getContainmentModel();
             m_test = root.addContainmentModel( url, conf );
         }
@@ -241,33 +245,35 @@ public class AbstractMerlinTestCase extends TestCase
         {
             final String message = 
               "Internal error while attempting to establish the test container.";
-            final String error = ExceptionHelper.packException( message, e, true );
-            getLogger().error( error );
-            throw new UnitRuntimeException( error );
+            final String error = UnitHelper.packException( message, e, true );
+            throw new UnitRuntimeException( error, e );
         }
     }
 
-    //-------------------------------------------------------------------
-    // testcase
-    //-------------------------------------------------------------------
+    //--------------------------------------------------------
+    // TestCase
+    //--------------------------------------------------------
 
    /**
-    * Startup the Merlin Kernel.
+    * Startup the kernel based on the meta model established 
+    * under the constructor.  The implementation will locate 
+    * the test container and establish it as the reference for 
+    * relative service lookups.
     */
     public void setUp() throws Exception
     {
-        getKernel().startup();
+        m_kernel.startup();
 
         try
         {
-            m_block = getKernel().getBlock( m_test );
+            m_block = m_kernel.getBlock( m_test );
         }
         catch( Throwable e )
         {
             final String message = 
               "Internal error while attempting to resolve test block: " 
               + m_test;
-            final String error = ExceptionHelper.packException( message, e, true );
+            final String error = UnitHelper.packException( message, e, true );
             getLogger().error( error );
             throw new UnitException( error );
         }
@@ -281,17 +287,17 @@ public class AbstractMerlinTestCase extends TestCase
         m_kernel.shutdown();
     }
 
-    //-------------------------------------------------------------------
-    // service access
-    //-------------------------------------------------------------------
+    //--------------------------------------------------------
+    // utilities
+    //--------------------------------------------------------
 
    /**
-    * Return a reference to the kernel.
-    * @return the kernel
+    * Return the assigned logging channel for the test case.
+    * @return the logging channel
     */
-    protected Kernel getKernel()
+    protected Logger getLogger()
     {
-        return m_kernel;
+        return m_logger;
     }
 
    /**
@@ -304,7 +310,7 @@ public class AbstractMerlinTestCase extends TestCase
     * @return the object resolved from an appliance defined by the supplied path
     * @exception UnitException if a resolution error occurs
     */
-    protected Object resolve( String path ) throws UnitException
+    protected Object resolve( String path ) throws Exception
     {
         if( path == null ) throw new NullPointerException( "path" );
 
@@ -323,144 +329,34 @@ public class AbstractMerlinTestCase extends TestCase
         {
             final String error = 
               "Service resolution error from path: " + path;
-            final String msg = ExceptionHelper.packException( error, e, false );
+            final String msg = UnitHelper.packException( error, e, false );
             throw new UnitException( msg, e );
         }
     }
 
-   /**
-    * Return the assigned logging channel for the test case.
-    * @return the logging channel
-    */
-    protected Logger getLogger()
-    {
-        return m_logger;
-    }
-
-    //-------------------------------------------------------------------
+    //--------------------------------------------------------
     // implementation
-    //-------------------------------------------------------------------
+    //--------------------------------------------------------
 
    /**
-    * Return the repository from which we will build the kernel classloader.
-    * @param repo the system repository directory
-    * @return the repository
+    * Convert a supplied file to a url.  If the file argument is
+    * null return null else return file.toURL().  
+    * @param file the file to convert
+    * @return the equivalent url
     */
-    private Repository createBootstrapRepository( File repo )
+    private URL convertToURL( File file )
     {
-        ProxyContext proxy = createProxyContext();
-        URL[] hosts = createHostsSequence();
-        return new DefaultFileRepository( repo, proxy, hosts );
-    }
-
-   /**
-    * Return an array of hosts based on the maven.repo.remote property value.
-    * @return the array of remote hosts
-    */
-    private URL[] createHostsSequence()
-    {
-        ArrayList list = new ArrayList();
-        String path = System.getProperty( "maven.repo.remote" );
-        if( path == null ) return new URL[0];
-
-        StringTokenizer tokenizer = new StringTokenizer( path, "," );
-        while( tokenizer.hasMoreElements() )
-        {
-            String token = tokenizer.nextToken();
-            appendEntry( list, token );
-        }
-        return (URL[]) list.toArray( new URL[0] );
-    }
-
-    private void appendEntry( List list, String token )
-    {
+        if( file == null ) return null;
         try
         {
-            list.add( new URL( token ) );
+            return file.toURL();
         }
         catch( Throwable e )
         {
             final String error = 
-              "Unable to convert token [" + token + "] to a URL.";
+              "Unable to convert file [" + file + "] to a url.";
             throw new UnitRuntimeException( error, e );
         }
-    }
-
-   /**
-    * Create of the proxy context.  If no proxy properties are declared a null
-    * value is returned.  Proxy values are based assessment of  
-    * properties maven.proxy.host, maven.proxy.port, maven.proxy.username and 
-    * maven.proxy.password.
-    *
-    * @return the proxy context or null if not required
-    */
-    private ProxyContext createProxyContext()
-    {
-        String host = System.getProperty( "maven.proxy.host" );
-        if( host != null )
-        {
-            String proxyPort = System.getProperty( "maven.proxy.port" );
-            if( proxyPort == null ) 
-              throw new IllegalStateException( "maven.proxy.port" );
-            int port = new Integer( proxyPort ).intValue();
-            String username = System.getProperty( "maven.proxy.username" );
-            DefaultAuthenticator authenticator = null;
-            if( username != null )
-            {
-                String password = System.getProperty( "maven.proxy.password" );
-                authenticator = new DefaultAuthenticator( username, password );
-            }
-            return new ProxyContext( host, port, authenticator );
-        }
-        else
-        {
-            return null;
-        }
-    }
-
-   /**
-    * Return the file corresponding  to the merlin system repository.
-    *
-    * @return the system repository directory
-    */
-    private static File getSystemRepositoryDirectory()
-    {
-        final String system = System.getProperty( "maven.repo.local" );
-        if( system != null )
-        {
-            return new File( new File( system ), "repository" );
-        }
-        else
-        {
-            final String home = System.getProperty( "maven.home" );
-            if( home != null )
-            {
-                return new File( new File( home ), "repository" );
-            }
-            else
-            {
-                File user = new File( System.getProperty( "user.dir" ) );
-                return new File( user, ".merlin/system" );
-            }
-        }
-    }
-
-   /**
-    * Convinience method to get the ${basedir}/target/classes directory.
-    * @return the deployment directory
-    */
-    public static File getTargetClassesDirectory()
-    {
-        return getProjectFile( "target/classes" );
-    }
-
-   /**
-    * Convinience method to get the ${basedir}/target/test-classes directory.
-    * @return the deployment url
-    */
-    public static File getTargetTestClassesDirectory()
-    {
-        return getProjectFile( "target/test-classes" );
     }
 
    /**
@@ -479,18 +375,29 @@ public class AbstractMerlinTestCase extends TestCase
         return new File( basedir );
     }
 
-    private URL convertToURL( File file )
+   /**
+    * Return the maven system repository directory.
+    * @return the system repository directory
+    */
+    private File getMavenRepositoryDirectory()
     {
-        if( file == null ) return null;
-        try
+        final String system = System.getProperty( "maven.repo.local" );
+        if( system != null )
         {
-            return file.toURL();
+            return new File( new File( system ), "repository" );
         }
-        catch( Throwable e )
+        else
         {
-            final String error = 
-              "Unable to convert file [" + file + "] to a url.";
-            throw new UnitRuntimeException( error, e );
+            final String home = System.getProperty( "maven.home" );
+            if( home != null )
+            {
+                return new File( new File( home ), "repository" );
+            }
+            else
+            {
+                File user = new File( System.getProperty( "user.dir" ) );
+                return new File( user, ".merlin/system" );
+            }
         }
     }
 }
